--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(kulki)
 
 include_directories(
     ./xeno
+    ./states
     .
     )
 
@@ -18,8 +19,15 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Werror -g -O0")
 add_executable(kulki
     ./main.cpp
     ./high_score.cpp
-    ./kulki_states.cpp
     ./config.cpp
+    ./states/menu_state.cpp
+    ./states/deal_state.cpp
+    ./states/wait_ball_state.cpp
+    ./states/wait_dest_state.cpp
+    ./states/move_state.cpp
+    ./states/score_state.cpp
+    ./states/high_score_state.cpp
+    ./states/game_over_state.cpp
 )
 
-target_link_libraries(kulki m allegro_monolith moon lang)
+target_link_libraries(kulki m allegro_monolith moon)
