--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project(kulki)
 include_directories(
     ./xeno
     ./model
+    ./gui
     ./states
     .
     )
@@ -14,19 +15,19 @@ link_directories(
     ./build
     )
 
-set(CMAKE_CXX_COMPILER "g++")
+set(CMAKE_CXX_COMPILER "clang++")
 set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Werror -g -O0")
 
 add_executable(kulki
+    ./gui/widget.cpp
     ./model/high_score.cpp
+    ./model/kulki_constants.cpp
     ./states/high_score_state.cpp
     ./states/game_over_state.cpp
     ./states/wait_dest_state.cpp
     ./states/move_state.cpp
     ./states/wait_ball_state.cpp
     ./states/kulki_context.cpp
-    ./states/kulki_constants.cpp
-    ./states/kulki_ui.cpp
     ./states/score_state.cpp
     ./states/menu_state.cpp
     ./states/deal_state.cpp
