--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,9 @@ link_directories(
     )
 
 set(CMAKE_CXX_COMPILER "clang++")
-set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Werror -g -O0 -DDICK_LOG_ENABLE")
+set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -g -O0 -DDICK_LOG_ENABLE")
 
 add_executable(kulki
-    ./gui/widget.cpp
     ./model/high_score.cpp
     ./states/kulki_constants.cpp
     ./states/kulki_variables.cpp
